fixed extra space

--- a/blog/static/blog/css/main.css
+++ b/blog/static/blog/css/main.css
@@ -1742,7 +1742,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 
 .s-pageheader--home {
    min-height: 480px;
-   padding-top: 222px;
+   padding-top: 10px;
 }
 
 .header {
